// =============================================================================
// Canals Order Management Service - Data Model
// Paste into https://dbdiagram.io/d to render.
// Companion to ./architectural-requirements.md
// =============================================================================

Project canals_orders {
  database_type: 'PostgreSQL'
  Note: '''
  Order management backend for an Apple-products retailer in the United States.
  Currency is USD; money is stored as integer cents.

  Core invariants enforced at the database level:
  - An order is fulfilled from exactly ONE warehouse (orders.warehouse_id).
  - inventory.quantity_available and quantity_reserved are CHECK >= 0, so
    overselling is impossible even if application logic is wrong.
  - order_items snapshot product sku, name and unit price: historical orders
    never change when the catalogue changes.
  - orders snapshot the shipping address AND its geocoded location: editing a
    customer profile never rewrites history, and the routing decision stays
    auditable forever.
  - inventory_movements is an append-only ledger. Current balances must be
    reconstructable by replaying it.
  - At most one CAPTURED payment per order (partial unique index).
  - All timestamps are timestamptz in UTC.

  Deliberately NOT stored, because they are derivable or belong elsewhere:
  - Distance order -> warehouse: recomputed with ST_Distance from the two
    frozen geographies.
  - Line totals: quantity * unit_price_cents, exact in integer arithmetic.
  - Order subtotal: SUM over order_items. Only total_cents is persisted,
    because that is the authoritative amount sent to the payment provider.
  - Allocation retry counts: metrics, not columns (NFR-4).
  - Sales tax and shipping cost: out of scope, see section 2.2.

  Asynchronous work runs through pg-boss, whose job table lives in this same
  database. That table is the transactional outbox, which is why no separate
  outbox_events table exists here. See the note above RELATIONSHIPS.
  '''
}

// =============================================================================
// ENUMS
// =============================================================================

Enum order_status {
  PENDING_PAYMENT [note: 'Stock reserved, payment not yet settled']
  PAID            [note: 'Payment captured, reservation committed']
  CONFIRMED       [note: 'Ready for fulfilment, event published']
  PAYMENT_FAILED  [note: 'Terminal. Reservation released']
  CANCELLED       [note: 'Terminal. Reservation released']
}

Enum payment_status {
  PENDING
  AUTHORIZED
  CAPTURED
  DECLINED
  FAILED
  UNKNOWN [note: 'Provider timeout. Resolved by the reconciliation job']
  REFUNDED
}

Enum shipment_status {
  PENDING_DISPATCH
  DISPATCHED
  IN_TRANSIT
  DELIVERED
  CANCELLED
}

Enum product_condition {
  NEW
  REFURBISHED
  OPEN_BOX
  USED
}

Enum inventory_movement_type {
  RESERVE  [note: 'available -> reserved, on order creation']
  RELEASE  [note: 'reserved -> available, on payment failure or expiry']
  COMMIT   [note: 'reserved -> gone, on payment capture']
  RESTOCK
  ADJUST   [note: 'Manual correction, audited']
}

Enum idempotency_state {
  IN_PROGRESS
  COMPLETED
}

// =============================================================================
// REFERENCE DATA  (seeded, no CRUD API - out of scope per the assessment)
// =============================================================================

Table customers {
  id uuid [pk, default: `gen_random_uuid()`]
  email varchar(320) [not null, unique]
  full_name varchar(200) [not null]
  phone varchar(32)
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  deleted_at timestamptz [note: 'Soft delete']

  Note: 'Pre-existing data. Referenced by orders but never mutated by this service.'
}

Table products {
  id uuid [pk, default: `gen_random_uuid()`]
  sku varchar(64) [not null, unique]
  name varchar(200) [not null]
  description text
  condition product_condition [not null, default: 'NEW']
  unit_price_cents bigint [not null, note: 'USD cents. Integer, never a float']
  is_active boolean [not null, default: true]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  deleted_at timestamptz

  indexes {
    is_active
    condition
  }

  Note: '''
  Condition lives on the product, not on inventory: a refurbished iPhone is a
  distinct SKU at a distinct price. Putting condition on inventory would force
  price to become per-warehouse-per-condition and would complicate warehouse
  selection for no domain benefit.
  '''
}

Table warehouses {
  id uuid [pk, default: `gen_random_uuid()`]
  name varchar(200) [not null, note: 'Human-readable identifier, e.g. Newark DC']
  address jsonb [not null, note: '{ line1, line2, city, state, postalCode, country }']
  location geography [not null, note: 'geography(Point,4326). GiST-indexed. Source of truth for distance ranking']
  latitude numeric(9,6) [note: 'GENERATED ALWAYS AS ST_Y(location::geometry) STORED - read-only, cannot desync']
  longitude numeric(9,6) [note: 'GENERATED ALWAYS AS ST_X(location::geometry) STORED - read-only, cannot desync']
  is_active boolean [not null, default: true]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  deleted_at timestamptz

  indexes {
    location [name: 'idx_warehouses_location_gist', note: 'USING gist - enables indexed nearest-neighbour ordering']
    is_active
  }

  Note: '''
  Coordinates are fixed reference data, seeded once. Warehouses are never
  geocoded at request time - only the shipping address is (FR-3).
  latitude/longitude are generated columns derived from location, so they are
  readable in a plain SELECT without ever being able to drift out of sync.
  '''
}

// =============================================================================
// INVENTORY  (the concurrency hot path)
// =============================================================================

Table inventory {
  warehouse_id uuid [not null]
  product_id uuid [not null]
  quantity_available integer [not null, default: 0, note: 'CHECK >= 0']
  quantity_reserved integer [not null, default: 0, note: 'CHECK >= 0']
  version integer [not null, default: 0, note: 'Optimistic-locking counter, secondary to SELECT FOR UPDATE']
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (warehouse_id, product_id) [pk]
    (product_id, warehouse_id) [name: 'idx_inventory_by_product', note: 'Drives the warehouse-selection query']
    (product_id, quantity_available) [name: 'idx_inventory_availability']
  }

  Note: '''
  Rows are locked with SELECT ... FOR UPDATE ORDER BY product_id during
  reservation, so concurrent orders acquire locks in the same sequence and
  cannot deadlock. CHECK constraints are the backstop: application logic is
  never trusted alone to prevent overselling.
  '''
}

// =============================================================================
// ORDERS
// =============================================================================

Table orders {
  id uuid [pk, default: `gen_random_uuid()`]
  order_number varchar(32) [not null, unique, note: 'Customer-facing reference, e.g. CNL-2026-000123. Never expose a UUID to a customer']
  customer_id uuid [not null]
  warehouse_id uuid [note: 'The single fulfilling warehouse. Null only while allocation is in flight']
  status order_status [not null, default: 'PENDING_PAYMENT']

  currency char(3) [not null, default: 'USD']
  total_cents bigint [not null, note: 'Authoritative amount charged. Subtotal is SUM(order_items), not stored']

  shipping_address jsonb [not null, note: 'Frozen snapshot: { recipient, line1, line2, city, state, postalCode, country }']
  shipping_location geography [not null, note: 'geography(Point,4326). Geocoded once at order time and frozen']

  reservation_expires_at timestamptz [note: 'Reaper releases stock past this while still PENDING_PAYMENT']
  confirmed_at timestamptz
  cancelled_at timestamptz
  cancellation_reason varchar(300)
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (created_at, id) [name: 'idx_orders_keyset', note: 'Keyset pagination for GET /orders']
    (customer_id, created_at)
    (status, reservation_expires_at) [name: 'idx_orders_reaper']
    warehouse_id
  }

  Note: '''
  The shipping address lives HERE, not on shipments, for three reasons:
  1. It is an INPUT to order creation - geocoding and warehouse selection both
     need it inside TX1, long before any shipment row exists (shipments are
     created asynchronously by the worker).
  2. Orders that end PAYMENT_FAILED or CANCELLED never get a shipment, but the
     customer still supplied an address. It must not be lost.
  3. The address is part of the order CONTRACT; the shipment is the EXECUTION
     of that contract. Different facts, different times.

  It is collapsed into one jsonb column rather than seven flat ones because it
  is written once, never mutated and never filtered field-by-field.

  Never hard-deleted and never soft-deleted. Financial records are append-only;
  the domain operation is CANCELLED.
  '''
}

Table order_items {
  id uuid [pk, default: `gen_random_uuid()`]
  order_id uuid [not null]
  product_id uuid [not null]
  quantity integer [not null, note: 'CHECK > 0']

  product_sku_snapshot varchar(64) [not null]
  product_name_snapshot varchar(200) [not null]
  unit_price_cents bigint [not null, note: 'Snapshot. Line total = quantity * this, exact in integer arithmetic']

  created_at timestamptz [not null, default: `now()`]

  indexes {
    (order_id, product_id) [unique, note: 'One line per product. Quantities are merged, not duplicated']
    product_id
  }

  Note: 'Resolves the N:M between orders and products, and freezes the price at purchase time.'
}

// =============================================================================
// PAYMENTS
// =============================================================================

Table payments {
  id uuid [pk, default: `gen_random_uuid()`]
  order_id uuid [not null, note: '1:N - one row per attempt, not 1:1']
  attempt smallint [not null, default: 1]
  provider varchar(32) [not null, default: 'mock-gateway']
  provider_payment_id varchar(128) [note: 'Reference returned by the gateway']
  idempotency_key varchar(128) [not null, unique, note: 'Derived from order id + attempt. Makes retries safe to the cent']
  status payment_status [not null, default: 'PENDING']

  amount_cents bigint [not null]
  currency char(3) [not null, default: 'USD']

  card_last4 char(4) [note: 'The full PAN is NEVER persisted, logged or traced']
  card_brand varchar(20)

  failure_code varchar(64) [note: 'Queryable for decline-reason metrics. Full text lives in raw_response']
  raw_response jsonb [note: 'Redacted gateway payload, for reconciliation']

  settled_at timestamptz [note: 'When the attempt reached a FINAL state. created_at is when we called the API; the gap is provider latency, and a null here past N minutes is what the reconciliation job hunts for']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (order_id, attempt) [unique]
    (status, created_at) [name: 'idx_payments_reconciliation']
  }

  Note: '''
  Payments belong to the ORDER, not to the customer.
  A partial unique index enforces at most one CAPTURED payment per order:
    CREATE UNIQUE INDEX ON payments (order_id) WHERE status = 'CAPTURED';
  '''
}

// =============================================================================
// FULFILMENT
// =============================================================================

Table shipments {
  id uuid [pk, default: `gen_random_uuid()`]
  order_id uuid [not null, unique, note: '1:1 with the order. UNIQUE is what makes the worker handler idempotent']
  warehouse_id uuid [not null, note: 'Ships from the allocated warehouse']
  status shipment_status [not null, default: 'PENDING_DISPATCH']
  carrier varchar(64)
  tracking_number varchar(128)
  dispatched_at timestamptz
  delivered_at timestamptz
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (status, created_at)
    warehouse_id
  }

  Note: '''
  Created asynchronously by the worker on order.confirmed. Reads the destination
  address through orders.shipping_address - it is not duplicated here.
  '''
}

// =============================================================================
// AUDIT AND INFRASTRUCTURE
// =============================================================================

Table inventory_movements {
  id bigint [pk, increment]
  warehouse_id uuid [not null]
  product_id uuid [not null]
  order_id uuid [note: 'Null for RESTOCK and ADJUST']
  type inventory_movement_type [not null]
  quantity_delta integer [not null, note: 'Signed']
  available_after integer [not null]
  reserved_after integer [not null]
  reason varchar(200)
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (warehouse_id, product_id, created_at)
    order_id
  }

  Note: 'Append-only ledger. Never updated, never deleted. This is what makes stock movement auditable.'
}

Table idempotency_keys {
  id uuid [pk, default: `gen_random_uuid()`]
  scope varchar(64) [not null, default: 'POST /orders']
  idempotency_key varchar(255) [not null]
  request_fingerprint char(64) [not null, note: 'SHA-256 of the canonicalised request body']
  state idempotency_state [not null, default: 'IN_PROGRESS']
  order_id uuid [note: 'Set once the order exists']
  response_status smallint
  response_body jsonb [note: 'Replayed verbatim on a duplicate request']
  created_at timestamptz [not null, default: `now()`]
  expires_at timestamptz [not null, note: 'created_at + 24h']

  indexes {
    (scope, idempotency_key) [unique, name: 'uq_idempotency']
    expires_at
  }

  Note: '''
  Inserted BEFORE any work begins, so the unique constraint is what serialises
  duplicate requests. Same key + different fingerprint returns 422 rather than
  silently doing the wrong thing.
  '''
}

// -----------------------------------------------------------------------------
// NOTE - transactional outbox
//
// There is deliberately NO outbox_events table.
// pg-boss stores its jobs in a table inside this same PostgreSQL database and
// accepts an external SQL executor, so the job INSERT joins the order's
// transaction directly. The pg-boss job table IS the outbox; a separate table
// plus a relay process would duplicate it.
//
// If the queue ever moves outside PostgreSQL (AWS SQS, Kafka), a real
// outbox_events table and a relay become mandatory again - and by design that
// change is confined to the EventPublisher adapter. See FR-9 and section 7 of
// architectural-requirements.md.
// -----------------------------------------------------------------------------

// =============================================================================
// RELATIONSHIPS
// =============================================================================

Ref: orders.customer_id > customers.id [delete: restrict]
Ref: orders.warehouse_id > warehouses.id [delete: restrict]

Ref: order_items.order_id > orders.id [delete: cascade]
Ref: order_items.product_id > products.id [delete: restrict]

Ref: payments.order_id > orders.id [delete: restrict]

Ref: shipments.order_id - orders.id [delete: restrict]
Ref: shipments.warehouse_id > warehouses.id [delete: restrict]

Ref: inventory.warehouse_id > warehouses.id [delete: cascade]
Ref: inventory.product_id > products.id [delete: restrict]

Ref: inventory_movements.warehouse_id > warehouses.id [delete: restrict]
Ref: inventory_movements.product_id > products.id [delete: restrict]
Ref: inventory_movements.order_id > orders.id [delete: restrict]

Ref: idempotency_keys.order_id > orders.id [delete: set null]

// =============================================================================
// GROUPS
// =============================================================================

TableGroup reference_data {
  customers
  products
  warehouses
}

TableGroup ordering {
  orders
  order_items
  payments
  shipments
}

TableGroup stock {
  inventory
  inventory_movements
}

TableGroup platform {
  idempotency_keys
}
